--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,8 @@
 	<title>Home</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link id="template-file" href="Files/css/rya-header.css" rel="stylesheet" />
+	<link id="template-file" href="Files/css/rya-home.css" rel="stylesheet" />
+	<link id="template-file" href="Files/css/rya-footer.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -14,7 +16,7 @@
 	        <div class="headerTop">
 	            <div class="headerLogo">
 	                <a href="#">
-	                    <img src="Files/images/logo.png" />
+	                    <img src="Files/images/logo2.png" />
 	                </a>
 	            </div>
 	            <div class=headerSearch>
@@ -44,5 +46,74 @@
 	        </div>
 	    </div>
 	</header>
+	<div class="home-page-container">
+		<div class="section1" style="display:flex">
+			<div class="container-left">
+			  <img src="Files/images/Imagen 1.png"></img>
+			</div>
+			<div class="container-right">
+			  <img src="Files/images/Imagen 2.png"></img>
+			  <img src="Files/images/Imagen 3.png"></img>
+			</div>
+		</div>
+	
+	
+		<div class="section2" style="display:flex">
+		  <img src="Files/images/Grupo 229.png"> </img>
+		  <img src="Files/images/Grupo 229.png"> </img>
+		  <img src="Files/images/Grupo 229.png"> </img>
+		  <img src="Files/images/Grupo 229.png"> </img>
+		</div>
+	
+	
+		<div class="section3">
+		  <img src="Files/images/Imagen 6.png" >
+		</div>
+	
+		<div class="section4" style="text-align:center">
+			<img src="Files/images/Imagen 7.png" >
+			<img src="Files/images/Imagen 7.png" >
+		</div>
+	
+		<div class="section5">
+		  <img src="Files/images/Img8.png">
+		</div>
+	  </div>
+	
+	  <div class="footer" style="background-color:#DBDBDB; height:200px; display:flex">
+		<div class="left" style="display:flex">
+		  <div class="left1">
+			<h2>Compañía</h2>
+			<p>Quienes somos</p>
+			<p>Blog</p>
+			<p>Afiliados</p>
+		  </div>
+		  <div class="left1">
+			<h2>Soporte</h2>
+			<p>Contacto</p>
+			<p>Devoluciones</p>
+			<p>Preguntas</p>
+		  </div>
+		  <div class="left1">
+			<h2>Tienda</h2>
+			<p>Novedades</p>
+			<p>Comprar todo</p>
+			<p>Hombres</p>
+			<p>Mujeres</p>
+		  </div>
+	
+		</div>
+		<div class="right">
+		  <div class="right1">
+			<h2>Estamos en contacto</h2>
+			<p>quejas-sujerencias@dobleuso.mx</p>
+	
+		  </div>
+	
+		</div>
+	  </div>
+	
+
+
 </body>
 </html>
