--- a/Quienes-somos.html
+++ b/Quienes-somos.html
@@ -6,8 +6,8 @@
 	<title>Home</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link id="template-file" href="Files/css/rya-header.css" rel="stylesheet" />
-	<link id="template-file" href="Files/css/rya-home.css" rel="stylesheet" />
 	<link id="template-file" href="Files/css/rya-footer.css" rel="stylesheet" />
+	<link id="template-file" href="Files/css/rya-we-are.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -15,7 +15,7 @@
 	    <div class="headerContainer">
 	        <div class="headerTop">
 	            <div class="headerLogo">
-	                <a href="#">
+	                <a href="Home.html">
 	                    <img src="Files/images/logo1.png" />
 	                </a>
 	            </div>
@@ -46,75 +46,46 @@
 	        </div>
 	    </div>
 	</header>
-	<div class="home-page-container">
-		<div class="section1" style="display:flex">
-			<div class="container-left">
-			  <img src="Files/images/Imagen 1.png"></img>
-			</div>
-			<div class="container-right">
-			  <img src="Files/images/Imagen 2.png"></img>
-			  <img src="Files/images/Imagen 3.png"></img>
-			</div>
-		</div>
-	
-	
-		<div class="section2" style="display:flex">
-		  <img src="Files/images/Grupo 229.png"> </img>
-		  <img src="Files/images/Grupo 229.png"> </img>
-		  <img src="Files/images/Grupo 229.png"> </img>
-		  <img src="Files/images/Grupo 229.png"> </img>
-		</div>
-	
-	
-		<div class="section3">
-		  <img src="Files/images/Imagen 6.png" >
-		</div>
-	
-		<div class="section4" style="text-align:center">
-			<img src="Files/images/Imagen 7.png" >
-			<img src="Files/images/Imagen 7.png" >
-		</div>
-	
-		<div class="section5">
-		  <img src="Files/images/Img8.png">
-		</div>
-	  </div>
+	<div class="we-are-container">
+		<h2>¿Quienes Somos?</h2>
+		<p>Reutiliza y aprueba es una plataforma dedicada a la venta y compra de material educativo utilizado por ex alumnos de diferentes carreras, haciendo que el dinero invertido en este material se pierda, por lo que ofrecemos la posibilidad de publicar este material en nuestra plataforma, para que alumnos de nuevo ingreso puedan adquirir el material a un menor costo.</p>
+		<h3>Misión</h3>
+		<p>Debido a esta situación, por medio de Reutiliza y aprueba, se permitirá que alumnos nuevos adquieran el material a un menor costo y que ex alumnos recuperen una parte del dinero invertido en su material escolar, evitando así desperdicios de materiales que aún tienen gran utilidad.</p>
+		<h3>Visión</h3>
+		<p>Ser la mejor opción de compra-venta de material solicitado en diferentes asignaturas, garantizando que el material se encuentre en condiciones aceptables y facilitar su adquisición por parte de aquellos alumnos que no pueden adquirir el material completamente nuevo.</p>
+	</div>
 	
 	<footer>
-	  <div class="footer" style="background-color:#DBDBDB; height:200px; display:flex">
-		<div class="left" style="display:flex">
-		  <div class="left1">
-			<h2>Compañía</h2>
-			<p>Quienes somos</p>
-			<p>Blog</p>
-			<p>Afiliados</p>
-		  </div>
-		  <div class="left1">
-			<h2>Soporte</h2>
-			<p>Contacto</p>
-			<p>Devoluciones</p>
-			<p>Preguntas</p>
-		  </div>
-		  <div class="left1">
-			<h2>Tienda</h2>
-			<p>Novedades</p>
-			<p>Comprar todo</p>
-			<p>Hombres</p>
-			<p>Mujeres</p>
-		  </div>
-	
-		</div>
-		<div class="right">
-		  <div class="right1">
-			<h2>Estamos en contacto</h2>
-			<p>quejas-sujerencias@dobleuso.mx</p>
-	
-		  </div>
-	
-		</div>
-	  </div>
+	  	<div class="footer" style="background-color:#DBDBDB; height:200px; display:flex">
+			<div class="left" style="display:flex">
+		  		<div class="left1">
+					<h2>Compañía</h2>
+					<p>Quienes somos</p>
+					<p>Blog</p>
+					<p>Afiliados</p>
+		  		</div>
+		  		<div class="left1">
+					<h2>Soporte</h2>
+					<p>Contacto</p>
+					<p>Devoluciones</p>
+					<p>Preguntas</p>
+		  		</div>
+			  	<div class="left1">
+					<h2>Tienda</h2>
+					<p>Novedades</p>
+					<p>Comprar todo</p>
+					<p>Hombres</p>
+					<p>Mujeres</p>
+			  	</div>
+			</div>
+			<div class="right">
+		  		<div class="right1">
+					<h2>Estamos en contacto</h2>
+					<p>quejas-sujerencias@dobleuso.mx</p>
+		  		</div>
+			</div>
+	  	</div>
 	</footer>
 
-
-</body>
+	</body>
 </html>
