--- a/Ofertas.html
+++ b/Ofertas.html
@@ -6,8 +6,9 @@
 	<title>Home</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link id="template-file" href="Files/css/rya-header.css" rel="stylesheet" />
-	<link id="template-file" href="Files/css/rya-home.css" rel="stylesheet" />
+    <link id="template-file" href="Files/css/rya-offers.css" rel="stylesheet" />
 	<link id="template-file" href="Files/css/rya-footer.css" rel="stylesheet" />
+	
 
 </head>
 <body>
@@ -15,7 +16,7 @@
 	    <div class="headerContainer">
 	        <div class="headerTop">
 	            <div class="headerLogo">
-	                <a href="#">
+	                <a href="Home.html">
 	                    <img src="Files/images/logo1.png" />
 	                </a>
 	            </div>
@@ -46,75 +47,57 @@
 	        </div>
 	    </div>
 	</header>
-	<div class="home-page-container">
-		<div class="section1" style="display:flex">
-			<div class="container-left">
-			  <img src="Files/images/Imagen 1.png"></img>
+	<div class="offers-container">
+		<h2>Ofertas</h2>
+		<div class="offers-line">
+			<div class="offers-item">
+				<img src="Files/images/Oferta1.png"/>
 			</div>
-			<div class="container-right">
-			  <img src="Files/images/Imagen 2.png"></img>
-			  <img src="Files/images/Imagen 3.png"></img>
+			<div class="offers-item">
+				<img src="Files/images/Oferta1.png"/>
 			</div>
 		</div>
-	
-	
-		<div class="section2" style="display:flex">
-		  <img src="Files/images/Grupo 229.png"> </img>
-		  <img src="Files/images/Grupo 229.png"> </img>
-		  <img src="Files/images/Grupo 229.png"> </img>
-		  <img src="Files/images/Grupo 229.png"> </img>
+		<div class="offers-line">
+			<div class="offers-item">
+				<img src="Files/images/Oferta2.png"/>
+			</div>
+			<div class="offers-item">
+				<img src="Files/images/Oferta2.png"/>
+			</div>
 		</div>
-	
-	
-		<div class="section3">
-		  <img src="Files/images/Imagen 6.png" >
-		</div>
-	
-		<div class="section4" style="text-align:center">
-			<img src="Files/images/Imagen 7.png" >
-			<img src="Files/images/Imagen 7.png" >
-		</div>
-	
-		<div class="section5">
-		  <img src="Files/images/Img8.png">
-		</div>
-	  </div>
+	</div>
 	
 	<footer>
-	  <div class="footer" style="background-color:#DBDBDB; height:200px; display:flex">
-		<div class="left" style="display:flex">
-		  <div class="left1">
-			<h2>Compañía</h2>
-			<p>Quienes somos</p>
-			<p>Blog</p>
-			<p>Afiliados</p>
-		  </div>
-		  <div class="left1">
-			<h2>Soporte</h2>
-			<p>Contacto</p>
-			<p>Devoluciones</p>
-			<p>Preguntas</p>
-		  </div>
-		  <div class="left1">
-			<h2>Tienda</h2>
-			<p>Novedades</p>
-			<p>Comprar todo</p>
-			<p>Hombres</p>
-			<p>Mujeres</p>
-		  </div>
-	
-		</div>
-		<div class="right">
-		  <div class="right1">
-			<h2>Estamos en contacto</h2>
-			<p>quejas-sujerencias@dobleuso.mx</p>
-	
-		  </div>
-	
-		</div>
-	  </div>
+	  	<div class="footer" style="background-color:#DBDBDB; height:200px; display:flex">
+			<div class="left" style="display:flex">
+		  		<div class="left1">
+					<h2>Compañía</h2>
+					<p>Quienes somos</p>
+					<p>Blog</p>
+					<p>Afiliados</p>
+		  		</div>
+		  		<div class="left1">
+					<h2>Soporte</h2>
+					<p>Contacto</p>
+					<p>Devoluciones</p>
+					<p>Preguntas</p>
+		  		</div>
+			  	<div class="left1">
+					<h2>Tienda</h2>
+					<p>Novedades</p>
+					<p>Comprar todo</p>
+					<p>Hombres</p>
+					<p>Mujeres</p>
+			  	</div>
+			</div>
+			<div class="right">
+		  		<div class="right1">
+					<h2>Estamos en contacto</h2>
+					<p>quejas-sujerencias@dobleuso.mx</p>
+		  		</div>
+			</div>
+	  	</div>
 	</footer>
 
-
-</body>
+	</body>
 </html>
